--- a/assets/style.css
+++ b/assets/style.css
@@ -2,8 +2,8 @@
     margin: 0;
     padding: 0;
 }
-Header, 
-Footer {
+header, 
+footer {
     width: 100%;
     height: 120px;
     background-color: seagreen;
