--- a/assets/style.css
+++ b/assets/style.css
@@ -1,22 +1,22 @@
- * {
+* {
     margin: 0;
     padding: 0;
    }
    
-   header,
-   footer {
+header,
+footer {
     width: 100%;
     height: 120px;
     background-color: seagreen;
     color: white;
    }
    
-   h1,
-   h2 {
+h1,
+h2 {
     text-align: center;
    }
    
-   img {
+img {
     display: block;
     height: 50px;
     width: 50px;
@@ -24,12 +24,19 @@
     margin-right: auto;
    }
    
-   ul {
+ul {
     padding-left: 40px;
     font-size: 20px;
    }
    
-   p {
+p {
     text-align: center;
     font-size: 30px;
    }
+
+.card {
+    width: 80%;
+    margin: 40px auto;
+    border: 5px solid gray;
+    box-shadow: 5px 10px #888888;
+  }
